Added a Health System!

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
 	<div id="title">TxtJelly</div>
+	<h3>Please Note:</h3>
+	<p>
+	The Game is still in it's Pre-alpha stage so go easy on it!
+	</p>
 	<div id="gs">
 	<h2>Getting Starting</h2>
 	<h3 onclick="intro()">Intro</h3>
