--- a/index.html
+++ b/index.html
@@ -21,5 +21,6 @@
 <h3 onclick="start_1()">Level 1</h3>
 </div>
 </br>
+<h3><a href="js/lv/new/demo.html" style="color: white;">The new armor system demo!</a></h3>
 </body>
 </html>
