Added details on the demo page!

--- a/js/lv/new/demo.html
+++ b/js/lv/new/demo.html
@@ -7,5 +7,6 @@
 <body>
 <button onclick="choose()">Kill</button>
 <button onclick="addArmor()">Add armor</button>
+<h4>We have changed the defalt health damage up to 2 so click Kill, then add armor then hit kill it will reduce health by 1 instead of 2!!</h4>
 </body>
 </html>
